--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,11 @@
 
 /* Your CSS Code here. */
+ #button-1,
+      #button-3,
+      #button-4,
+      #button-5,
+      #button-6,
+      #button-7,
+      #button-8 {
+        border-style: none !important;
+      }
